syntax = "proto3";

package cebes;
option java_multiple_files = true;
option java_package = "io.cebes.pipeline.protos";
option java_outer_classname = "ValueProtos";

// a scalar value, which uses oneof
// Note that oneof can be unspecified,
// in which case it represents "null" or empty value
message ScalarDef {
    oneof value {
        string string_val = 1;
        bool bool_val = 2;
        int32 byte_val = 3;
        int32 short_val = 4;
        int32 int32_val = 5;
        int64 int64_val = 6;
        float float_val = 7;
        double double_val = 8;
    }
}

message ArrayDef {
    repeated ValueDef element = 1;
}

// since we use ValueDef as type for both key and value,
// we cannot use the map<key_type, val_type> feature of proto3
message MapDef {
    message MapEntryDef {
        ValueDef key = 1;
        ValueDef value = 2;
    }
    repeated MapEntryDef entry = 3;
}

message ColumnDef {

    // the JSON representation of the column
    string column_json = 1;
}

// Generic message on the wire for encoding "any" value
// can be used to represent the value of a parameter,
// value in a data sample, etc...
message ValueDef {
    oneof value {
        ScalarDef scalar = 1;
        ArrayDef array = 2;
        MapDef map = 3;

        // value as a Column
        // this is mainly for the Param[Column] (i.e. ColumnParam)
        // of the pipeline.
        // Normal values shouldn't be using this field.
        ColumnDef column = 4;
    }
}
